AMP-4507
git-svn-id: file:///svn/trunk/amp@7151 9e8d75aa-d0cb-44a9-8341-a4b8ba1a38b4